# Picochord

./: .gitignore  CMakeLists.txt  readme.md
chassis/: battery_support.stl  speaker_support.FCStd  speaker_support.stl
main/: CMakeLists.txt  MidiNote.cpp  MidiNote.h  Scale.cpp  Scale.h  cap1188.cpp  cap1188.h  chord.cpp  chord.h  keypad.cpp  keypad.h  main.cpp  oscillator.cpp  oscillator.h  strumpad.cpp  strumpad.h
main/fpm/: ios.h
main/oscillator/: CMakeLists.txt  main.cpp  oscillator.cpp  oscillator.h
main/oscillator/fpm/: math.h
pcb/keypad/: Omni.kicad_sch  keypad.kicad_pcb
pcb/simulation/: keypad.circuitjs.txt  readme.md  strumpad.circuitjs.txt
pcb/speaker/: speaker.kicad_pcb  speaker.kicad_sch
pcb/strumpad/: strumpad.kicad_pcb  strumpad.kicad_sch
